Razer rest sdk (#75)
* refactored code to use rest SDK
* checkstyle on chroma league
* small fixes