@@ -6,9 +6,9 @@ import com.bonepl.razersdk.animation.Color;
 import com.bonepl.razersdk.animation.Frame;
 import com.bonepl.razersdk.animation.SimpleFrame;
 import com.bonepl.razersdk.sdk.RzKey;
-import org.apache.commons.collections4.ListUtils;
+import com.bonepl.razersdk.sdk.RzKeyJoiner;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class ElderBuffAnimation extends AnimatedFrame {
 
@@ -22,12 +22,12 @@ public class ElderBuffAnimation extends AnimatedFrame {
 
     private void extendAnimation() {
         for (int i = 0; i < 10; i++) {
-            addAnimationFrame(2, new SimpleFrame(ListUtils.sum(KilledDragonBar.FIRST_DRAGON_ROW,
-                    Arrays.asList(RzKey.RZKEY_UP, RzKey.RZKEY_DOWN, RzKey.RZKEY_RIGHT)), Color.WHITE));
-            addAnimationFrame(2, new SimpleFrame(Arrays.asList(RzKey.RZKEY_RSHIFT,
-                    RzKey.RZKEY_UP), Color.WHITE));
-            addAnimationFrame(2, new SimpleFrame(RzKey.RZKEY_ENTER, Color.WHITE));
-            addAnimationFrame(2, new SimpleFrame(RzKey.RZKEY_OEM_6, Color.WHITE));
+            addAnimationFrame(2, new SimpleFrame(new RzKeyJoiner().with(KilledDragonBar.FIRST_DRAGON_ROW)
+                    .with(List.of(RzKey.RZKEY_UP, RzKey.RZKEY_DOWN, RzKey.RZKEY_RIGHT)).with(RzKey.RZKEY_RALT).join(), Color.WHITE));
+            addAnimationFrame(2, new SimpleFrame(List.of(RzKey.RZKEY_RSHIFT,
+                    RzKey.RZKEY_UP, RzKey.RZKEY_SLASH), Color.WHITE));
+            addAnimationFrame(2, new SimpleFrame(List.of(RzKey.RZKEY_ENTER, RzKey.RZKEY_APOSTROPHE), Color.WHITE));
+            addAnimationFrame(2, new SimpleFrame(List.of(RzKey.RZKEY_BACKSLASH, RzKey.RZKEY_SQUARE_BRACKET_RIGHT), Color.WHITE));
             addAnimationFrame(20, new SimpleFrame());
         }
     }
